# app_flock

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: crypto.rs  lib.rs  main.rs  secure.rs  utils.rs
ui/: app-widgets.slint  app-window.slint  app.slint
